# karsa-auto-session-manager

./: .dockerignore  .env.example  .env.testnet  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Dockerfile  Dockerfile.warp  Makefile  README.md  alembic.ini  check_bybit.py  docker-compose.apps.yml  docker-compose.infra.yml  docker-compose.yml  entrypoint.sh  fix_dashboard.py  fix_stale.py  get_ticker.py  live_logs.txt  patch.diff  prometheus.yml  pyproject.toml  requirements.txt  test_alert.py  test_bulk.py  test_ccxt.py  test_failures.txt  test_fetch_pos.py  test_funnel.py  test_router.py  test_tick.py  update_docs.py  warp-entrypoint.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_sprint8_analytics.py  003_ai_and_multi_strategy_schema.py  004_xgboost_features.py
app/: main.py
app/ai/: circuit_breaker.py  dto.py  nine_router_service.py  parser.py  service.py
app/alpha/: analyst.py  bridge.py  entry_filter.py  evidence_collector.py  evidence_provider.py  lead_lag_buffer.py  market_analyzer.py  market_state.py  metrics.py  micro_scalper.py  ml_harvester.py  ml_prefilter.py  multi_tf.py  position_judge.py  regime.py  regime_classifier.py  sector_filter.py  signals.py  strategy_router.py  ta_tools.py  trade_memory.py
app/analytics/: ai_effectiveness.py  calibration.py  evidence.py  lifecycle.py  performance.py  reconciliation.py  reports.py  runtime.py
app/backtest/: engine.py  formatter.py  optimizer.py  orchestrator.py  worker.py
app/bot/: __init__.py  alert_service.py  handlers.py  runner.py
app/commander/: __init__.py  main.py
app/consumer/: __init__.py  candle_buffer.py  decision_engine.py  live_loop.py  market_consumer.py  shadow_loop.py
app/core/: __init__.py  ai_client.py  config.py  context.py  database.py  decision_context.py  decision_lifecycle.py  decision_trace.py  state.py  (+17 more)
config/: features.yaml
docs/: AI_INTERFACE.md  ALPHA_METRICS_SPEC.md  ARCHITECTURE.md  CONFIGURATION.md  DATA_MODEL.md  DATA_RETENTION.md  DEFINITION_OF_DONE.md  E2E_WORKFLOW.md  EVENTS.md  IDEAS_BACKLOG.md  METRICS_DICTIONARY.md  MVP_SCOPE.md  OWNERSHIP.md  PRD.md  REDIS_OWNERSHIP.md  RISK_AND_RUNBOOK.md  ROADMAP.md  SETUP.md  SYSTEM_CONSTANTS.md  TELEGRAM_INTERFACE.md  TESTING_STRATEGY.md
models/: hmm_BTC_USDT.pkl  hmm_DEFAULT.pkl  hmm_ETH_USDT.pkl  hmm_SOL_USDT.pkl
scripts/: backtest_determinism.py  baseline_dashboard.py  bootstrap_local.py  check_bybit.py  check_status.py  current_exposure.py  emergency_close.py  get_positions.py  ingest_historical_candles.py  init_db.sql  monitor-pipeline.sh  monitor_background.py  monitor_health.sh  pipeline-funnel.sh  replay_tool.py  run_optimizer.py  train_hmm.py  train_xgboost.py  validate_e2e.py  validate_pos.py  worker_test.py
tests/: conftest.py  test_ingestion.py  test_kasm21_smart_monolith.py  test_profit_leaks_and_micro_opts.py  test_shadow_apm.py
(+170 files in other folders)
