# Karsa ASM — pyproject.toml (pytest + ruff + black + mypy config)

[project]
name = "karsa-auto-session-manager"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "integration: marks integration tests requiring mock infra",
]
addopts = [
    "--strict-markers",
    "--tb=short",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "PLW", "PLR"]
ignore = [
    "E501",       # line length handled by black
    "E402",       # module-level imports not at top — intentional for side-effect imports
    "PLR0911",    # too many return statements
    "PLR0912",    # too many branches
    "PLR0913",    # too many arguments
    "PLR0915",    # too many statements
    "PLR2004",    # magic values — common in config-heavy trading code
    "PLW0108",    # unnecessary lambda
    "PLW2901",    # outer loop variable overwritten
    "N806",       # variable in function should be lowercase
    "SIM102",     # use single if
    "SIM105",     # use contextlib.suppress
    "SIM108",     # use ternary
    "SIM113",     # use enumerate
    "SIM117",     # use single with
    "B905",       # missing explicit keyword arguments
    "E741",       # ambiguous variable name
    "F821",       # undefined name — often dynamic attrs
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
target-version = ["py311"]
line-length = 120

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
